[package]
name = "style-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
css-parser = { path = "../parser/css" }
html-parser = { path = "../parser/html" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
