[package]
name = "browser-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
html-parser = { path = "../../parser/html" }
css-parser = { path = "../../parser/css" }

# External dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async runtime
futures = { workspace = true }

# System integration
libc = { workspace = true }
