[package]
name = "http-client"
version = "0.1.0"
edition = "2021"

[dependencies]
url-parser = { path = "../../parser/url" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
cookie = "0.16"
mime = "0.3"
base64 = "0.21"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
