[package]
name = "css-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
html-parser = { path = "../html" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
